Fix misaligned text

--- a/flask_stuff/static/styles/style.css
+++ b/flask_stuff/static/styles/style.css
@@ -58,7 +58,6 @@ body {
 
 .made-by {
     font-size: 15px;
-    position: absolute;
 }
 
 .middle-text {
